fix: horizontal scrollbar hidden

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,7 @@ body,
   padding: 0;
   height: 100vh;
   width: 100vw;
+  overflow-x: hidden;
 }
 
 * {
